Made RSVP form & Thank You page
added IActionResults for RsvpForm and it's response

--- a/PartyInvites/PartyInvites/Views/Home/MyView.cshtml
+++ b/PartyInvites/PartyInvites/Views/Home/MyView.cshtml
@@ -7,6 +7,10 @@
         <title>Party Invites App</title>
     </head>
     <body>
-        <h1>Hello World (From MyView)</h1>
+        <h3>
+            @ViewBag.Greeting
+            <br />
+            <a asp-action="RsvpForm">RSVP now</a>
+        </h3>
     </body>
     </html>
