Made Repository Model
Fetched Response, saved it and displayed Response data

--- a/PartyInvites/PartyInvites/Views/Home/ThankYou.cshtml
+++ b/PartyInvites/PartyInvites/Views/Home/ThankYou.cshtml
@@ -10,5 +10,6 @@
     <h3>
         @ViewBag.respond
     </h3>
+    <p>Click <a asp-action="ListResponses">here</a> to see who else is coming.</p>
 </body>
 </html>
