Validations, Regular Expressions, Food Restriction, Not Coming list
Added Validations to GuestResponse Model with RegularExpression and custom ErrorMessage.
Created another IActionResult NotComing for listing the people who are not coming

--- a/PartyInvites/PartyInvites/Views/Home/ListResponses.cshtml
+++ b/PartyInvites/PartyInvites/Views/Home/ListResponses.cshtml
@@ -17,6 +17,7 @@
             <th>Name</th>
             <th>Email</th>
             <th>Phone</th>
+            <th>Food Restrictions</th>
         </tr>
         @foreach (var response in Model)
         {
@@ -24,8 +25,9 @@
             <tr>
                 <td>@i</td>
                 <td>@response.Name</td>
-                <td>@response.Email</td>
+                <td><a href="mailto:@response.Email">@response.Email</a></td>
                 <td>@response.Phone</td>
+                <td>@response.FoodRestrict</td>
             </tr>
         }
     </table>
