--- a/PartyInvites/PartyInvites/Views/Home/RsvpForm.cshtml
+++ b/PartyInvites/PartyInvites/Views/Home/RsvpForm.cshtml
@@ -12,6 +12,7 @@
 <body>
     <div>RSVP Form</div>
     <form asp-action="RsvpForm" method="post">
+        <div asp-validation-summary="All"></div>
         <p>
             <label asp-for="Name">Your Name: </label>
             <input asp-for="Name" />
@@ -30,6 +31,10 @@
                 <option value="true">Yes</option>
                 <option value="false">No</option>
             </select>
+        </p>
+        <p>
+            <label asp-for="FoodRestrict">Do you you have any Food Restrictions: </label>
+            <input asp-for="FoodRestrict" />
         </p>
         <button type="reset">Reset</button>&nbsp;<button type="submit">Submit RSVP</button>
     </form>
