Styling and Bug fixes

--- a/PartyInvites/PartyInvites/Views/Home/ListResponses.cshtml
+++ b/PartyInvites/PartyInvites/Views/Home/ListResponses.cshtml
@@ -7,8 +7,9 @@
 <html>
 <head>
     <title>Guest List</title>
+    <link href="~/lib/bootstrap/dist/css/bootstrap.css" rel="stylesheet" />
 </head>
-<body>
+<body class="container">
     <h3>Guest List</h3>
     <p>@Model.Count() people are coming to the party</p>
     <table>
