--- a/PartyInvites/PartyInvites/Views/Home/ThankYou.cshtml
+++ b/PartyInvites/PartyInvites/Views/Home/ThankYou.cshtml
@@ -5,6 +5,7 @@
 <html>
 <head>
     <title>Party Invites App</title>
+    <link href="~/lib/bootstrap/dist/css/bootstrap.css" rel="stylesheet" />
 </head>
 <body>
     <h3>
